code/examples/stderr/borrowck_4.stderr
error[E0505]: cannot move out of `foo` because it is borrowed
 --> examples/borrowck_4.rs:8:5
  |
6 |     let mut foo = Foo(&mut data);
  |         ------- binding `foo` declared here
7 |     mutate(&mut foo);
  |            -------- borrow of `foo` occurs here
8 |     dbg!(foo);
  |     ^^^^^^^^^
  |     |
  |     move out of `foo` occurs here
  |     borrow later used here
  |
note: if `Foo<'_>` implemented `Clone`, you could clone the value
 --> examples/borrowck_4.rs:2:1
  |
2 | struct Foo<'a>(&'a mut u32);
  | ^^^^^^^^^^^^^^ consider implementing `Clone` for this type
...
7 |     mutate(&mut foo);
  |                 --- you could clone this value
  = note: this error originates in the macro `dbg` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0505`.
error: could not compile `code` (example "borrowck_4") due to 1 previous error
